--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ env:
     - MAIN_CMD="python ./testsuite/MDAnalysisTests/mda_nosetests --processes=2 --process-timeout=400 --no-open-files --with-timer --timer-top-n 50"
     - SETUP_CMD=""
     - COVERALLS=false
-    - BUILD_CMD="pip install -v package/ && pip install testsuite/"
+    - BUILD_CMD="CFLAGS=${ADD_CFLAGS} pip install -v package/ && pip install testsuite/"
     - CONDA_DEPENDENCIES="mmtf-python nose=1.3.7 mock six biopython networkx cython joblib nose-timer"
     - CONDA_ALL_DEPENDENCIES="mmtf-python nose=1.3.7 mock six biopython networkx cython joblib nose-timer matplotlib netcdf4 scikit-learn scipy seaborn coveralls clustalw=2.1"
     # Install griddataformats from PIP so that scipy is only installed in the full build (#1147)
@@ -33,6 +33,7 @@ env:
     - CONDA_CHANNEL_PRIORITY=True
     - NUMPY_VERSION=stable
     - ARCHITECTURE_32BIT=False
+    - ADD_CFLAGS=""
 
 matrix:
   fast_finish: true
@@ -82,6 +83,7 @@ matrix:
       env: NAME='32bits'
            PYTHON_VERSION=2.7
            ARCHITECTURE_32BIT=True
+           ADD_CFLAGS='-m32'
       addons:
         apt:
           packages:
